@@ -3,6 +3,7 @@ package com.medlemsklubb.businesslogic;
 import com.medlemsklubb.data.MemberRegistry;
 import com.medlemsklubb.head.Member;
 import com.medlemsklubb.head.StatusLevel;
+import com.medlemsklubb.exception.InvalidMemberDataException;
 
 import java.util.Optional;
 
@@ -17,38 +18,75 @@ public class MemberService {
         this.registry = registry;
     }
 
-    //skapa och spara en ny medlem
-    public Member create(String firstName, String lastName, String level, boolean license) {
+    //skapa och spara en ny medlem. Varje fel kastas i domän exception
+    public Member create(String firstName, String lastName, String level, boolean license) throws InvalidMemberDataException {
 
-        if (level == null || level.isBlank()) {
-            level = StatusLevel.STANDARD;
+        if (level == null || firstName.trim().isEmpty()) {
+            throw new InvalidMemberDataException("Förnamn får inte vara tomt");
         }
+
+        if (lastName == null || lastName.trim().isEmpty()) {
+            throw new InvalidMemberDataException("Efternamn får inte vara tomt");
+        }
+
+        String normalizedLevel = normalizedLevel(level); //Normalisera status
+
         Member member = new Member(firstName, lastName, level, license);
         registry.add(member);
         return member;
     }
 
     // uppdatera namn
-    public boolean updateName(int memberId, String firstName, String lastName) {
+    public boolean updateName(int memberId, String firstName, String lastName) throws InvalidMemberDataException {
+
+        if (firstName == null || firstName.trim().isEmpty()) {
+            throw new InvalidMemberDataException("Förnamn får inte vara tomt");
+        }
+        if (lastName == null || lastName.trim().isEmpty()) {
+            throw new InvalidMemberDataException("Efternamn får inte vara tomt");
+        }
         Optional<Member> opt = registry.findById(memberId);
-        if (opt.isEmpty())
+        if (opt.isEmpty()) {
             return false;
+        }
+
         Member member = opt.get();
         member.setFirstname(firstName);
         member.setLastname(lastName);
         return true; // boolean tilldelas värdet true om medlem fanns och ändrades
     }
-// uppdatera leevel
-        public boolean updateLevel(int memberId, String level) {
-            Optional<Member> opt = registry.findById(memberId);
-            if (opt.isEmpty()) {
-                return false;
-            }
-            if (level == null || level.isBlank()) {
-                level = StatusLevel.STANDARD;
-            }
-            opt.get().setLevel(level);
-            return true;
 
+    // uppdatera leevel
+    public boolean updateLevel(int memberId, String level) throws InvalidMemberDataException {
+
+        String normalizedLevel = normalizedLevel(level);
+
+        Optional<Member> opt = registry.findById(memberId);
+        if (opt.isEmpty()) {
+            return false;
         }
+
+        opt.get().setLevel(normalizedLevel);
+        return true;
+    }
+
+    public boolean updateLicense(int memberId, boolean hasLicense) {
+        Optional<Member> opt = registry.findById(memberId);
+        if (opt.isEmpty()) return false;
+        opt.get().setLicense(hasLicense);
+        return true;
+    }
+
+
+    private String normalizedLevel(String level) throws InvalidMemberDataException {
+        if (level == null || level.isBlank()) {
+            return StatusLevel.STANDARD;
+        }
+String normalized = level.trim().toUpperCase();
+
+        if (!StatusLevel.STANDARD.equals(normalized) && !StatusLevel.STUDENT.equals(normalized) && !StatusLevel.SENIOR.equals(normalized)) {
+            throw new InvalidMemberDataException("Ogiltig status.");
+        }
+        return normalized;
+    }
 }
